1)修复了所有已知的问题，高分辨率下，低分辨率下完美显示。

--- a/res/layout-mdpi/thanks.xml
+++ b/res/layout-mdpi/thanks.xml
@@ -7,12 +7,15 @@
         <Button android:text="上一步" android:layout_height="35dip" android:layout_margin="3dip" android:background="@drawable/button_short_background" android:layout_gravity="center_vertical" android:id="@+id/backButton" android:layout_weight="0.06" android:layout_width="70dip"></Button>
         <TextView android:id="@+id/neverCallTextView" android:layout_width="wrap_content" android:layout_height="fill_parent" android:gravity="center" android:text="鸣谢" android:textAppearance="?android:attr/textAppearanceMedium" android:textSize="24dip" android:textStyle="bold" android:layout_weight="0.45"></TextView>
     </LinearLayout>
-
+
     <LinearLayout
         android:id="@+id/linearLayout1"
         android:layout_width="fill_parent"
         android:layout_height="340dp"
-        android:layout_margin="5dip"
+        android:layout_marginBottom="3dip"
+        android:layout_marginLeft="3dip"
+        android:layout_marginRight="3dip"
+        android:layout_marginTop="5dip"
         android:layout_weight="1.05"
         android:background="@drawable/thanks_blackground"
         android:orientation="vertical" >
