--- a/res/layout-mdpi/about.xml
+++ b/res/layout-mdpi/about.xml
@@ -19,12 +19,15 @@
 </Button>
         <TextView android:id="@+id/neverCallTextView" android:layout_width="wrap_content" android:layout_height="fill_parent" android:gravity="center" android:text="关于" android:textAppearance="?android:attr/textAppearanceMedium" android:textSize="24dip" android:textStyle="bold" android:layout_weight="0.47"></TextView>
     </LinearLayout>
-
+
     <TextView
         android:id="@+id/aboutText"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:layout_margin="5dip"
+        android:layout_marginBottom="3dip"
+        android:layout_marginLeft="3dip"
+        android:layout_marginRight="3dip"
+        android:layout_marginTop="5dip"
         android:autoLink="web|email"
         android:background="@drawable/help_blackground"
         android:gravity="center_vertical|clip_horizontal"
@@ -32,6 +35,7 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:textSize="14dp"
         android:textStyle="bold" >
+
 </TextView>
     
 </LinearLayout>
