refactor: replace XML by SQLite3

--- a/res/layout-hdpi/turntable.xml
+++ b/res/layout-hdpi/turntable.xml
@@ -1,9 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-  xmlns:android="http://schemas.android.com/apk/res/android"
-  android:layout_width="fill_parent"
-  android:layout_height="fill_parent" android:background="@drawable/turntable" android:orientation="vertical" android:weightSum="1">
-    <LinearLayout android:baselineAligned="false" android:background="@drawable/bar" android:id="@+id/barLinearLayout" android:weightSum="1" android:layout_width="fill_parent" android:layout_height="51dip">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:background="@drawable/turntable"
+    android:orientation="vertical"
+    android:weightSum="1" >
+
+    <LinearLayout
+        android:id="@+id/barLinearLayout"
+        android:layout_width="fill_parent"
+        android:layout_height="51dip"
+        android:background="@drawable/bar"
+        android:baselineAligned="false"
+        android:weightSum="1" >
 
         <Button
             android:id="@+id/backButton"
@@ -17,8 +26,8 @@
             android:background="@drawable/button_short_background"
             android:text="上一步"
             android:textStyle="bold" >
-</Button>
-
+        </Button>
+
         <TextView
             android:id="@+id/neverCallTextView"
             android:layout_width="wrap_content"
@@ -29,14 +38,36 @@
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:textSize="28dip"
             android:textStyle="bold" >
+        </TextView>
+    </LinearLayout>
 
-</TextView>
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="25dip"
+        android:layout_weight="0.28"
+        android:paddingLeft="12dp"
+        android:paddingRight="12dp"
+        android:paddingTop="10dp" >
+
+        <edu.crabium.android.geekclock.wheel.WheelView
+            android:id="@+id/hour"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dip"
+            android:layout_weight="1" >
+        </edu.crabium.android.geekclock.wheel.WheelView>
+
+        <edu.crabium.android.geekclock.wheel.WheelView
+            android:id="@+id/mins"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dip"
+            android:layout_weight="1" >
+        </edu.crabium.android.geekclock.wheel.WheelView>
     </LinearLayout>
-    <LinearLayout android:layout_height="wrap_content" android:paddingTop="10dp" android:paddingLeft="12dp" android:paddingRight="12dp" android:layout_width="fill_parent" android:layout_gravity="center_horizontal" android:layout_marginTop="25dip" android:layout_weight="0.28">
-        <edu.crabium.android.wheel.WheelView android:layout_height="wrap_content" android:layout_weight="1" android:layout_width="fill_parent" android:id="@+id/hour" android:layout_marginTop="20dip"></edu.crabium.android.wheel.WheelView>
-        <edu.crabium.android.wheel.WheelView android:layout_height="wrap_content" android:layout_weight="1" android:layout_width="fill_parent" android:id="@+id/mins" android:layout_marginTop="20dip"></edu.crabium.android.wheel.WheelView>
-    </LinearLayout>
-
+
     <TextView
         android:id="@+id/showFrequencyTextView"
         android:layout_width="284dp"
@@ -45,8 +76,7 @@
         android:layout_marginTop="91dip"
         android:text="现在的刷新频率是：每0小时00分钟一次"
         android:textSize="16dip" >
-
-</TextView>
+    </TextView>
 
     <Button
         android:id="@+id/confirmButton"
@@ -56,6 +86,6 @@
         android:layout_marginTop="33dip"
         android:background="@drawable/button_blackground_normal_green"
         android:text="确定" >
-</Button>
-    
+    </Button>
+
 </LinearLayout>
